[gd_scene load_steps=6 format=3 uid="uid://3nt3p18whb17"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_gxnfq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pn2ik"]
bg_color = Color(0.295035, 0.0370773, 0.0554581, 1)
border_width_bottom = 10
border_color = Color(0.52159, 0.0968998, 0.127098, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.777631, 0.177558, 0.215329, 1)
shadow_size = 4
shadow_offset = Vector2(4, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73rjy"]
bg_color = Color(0.876546, 0.141549, 0.273103, 1)
border_width_bottom = 10
border_color = Color(0.295035, 0.0370773, 0.0554581, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.52159, 0.0968998, 0.127098, 1)
shadow_size = 4
shadow_offset = Vector2(4, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1npmx"]
bg_color = Color(0.441433, 0.0755091, 0.101635, 1)
border_width_bottom = 10
border_color = Color(0.52159, 0.0968998, 0.127098, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.777631, 0.177558, 0.215329, 1)
shadow_size = 4
shadow_offset = Vector2(4, 5)

[sub_resource type="Theme" id="Theme_ty6oi"]
Button/styles/hover = SubResource("StyleBoxFlat_pn2ik")
Button/styles/normal = SubResource("StyleBoxFlat_73rjy")
Button/styles/pressed = SubResource("StyleBoxFlat_1npmx")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxnfq")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1157.0
offset_bottom = 654.0
color = Color(0.788235, 0.105882, 0.223529, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -28.0
offset_right = 113.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ty6oi")
theme_override_colors/font_hover_pressed_color = Color(0.683553, 0.568251, 0, 1)
theme_override_colors/font_hover_color = Color(0.898039, 0.552941, 0, 1)
text = "PLAY"

[node name="LevelSelection" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.683553, 0.568251, 0, 1)
theme_override_colors/font_hover_color = Color(0.898039, 0.552941, 0, 1)
text = "LEVEL SELECTION"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.683553, 0.568251, 0, 1)
theme_override_colors/font_hover_color = Color(0.898039, 0.552941, 0, 1)
text = "EXIT
"

[node name="Title" type="Label" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 75
text = "MININJA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.5
offset_top = 118.0
offset_right = 142.5
offset_bottom = 191.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "A flash game by FYRAXYS"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DiscordButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -53.0
offset_right = 187.0
grow_vertical = 0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.796078, 1)
theme_override_colors/font_color = Color(0.29286, 0.503239, 0.989935, 1)
text = "Join the discord server !!!"
flat = true
autowrap_mode = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelection" to="." method="_on_level_selection_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="DiscordButton" to="." method="_on_discord_button_pressed"]
